my-website/src/App.css
/* Navbar section underline */
.active {
  border-bottom: 1px solid #000;
}

/* Remove default styling on columns */
.col-lg-4 {
  text-align: center;
}

.col-lg-4,
.col-lg-8 {
  padding: 0px 16px !important;
}

.col-xl-2,
.col-md-4,
.col-sm-6 {
  padding: 16px !important;
  text-align: center;
}

/* Education and Employment Components */
#education,
#employment {
  background-color: #eee;
  padding: 70px;
}

/* Images */
.education-image,
.employment-image,
.projects-image,
.skills-image {
  border-radius: 50%;
  height: auto;
  max-height: 150px;
  max-width: 150px;
  width: 100%;
}

/* Headline */
.headline {
  font-size: 24px;
}

/* Horizontal rule */
hr {
  margin: 48px 0px;
}

/* Loading image */
.loading-image {
  visibility: hidden;
}

/* Main picture */
.main-picture {
  background-image: url("../docs/toronto.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
  object-fit: cover;
  width: 100vw;
}

/* Navbar */
.navbar {
  background-color: #fff;
}

/* Navbar and navbar effect */
.navbar,
.navbar-effect {
  align-items: center;
  display: flex;
  height: 70px;
  left: 0px;
  padding: 16px 54px;
  position: fixed;
  top: 0px;
  width: 100%;
  z-index: 1;
}

/* Navbar effect */
.navbar-effect {
  background-color: #92e585;
  box-shadow: 0 0 16px rgba(0, 0, 0, 0.25);
}

/* Navbar logo */
.navbar-logo {
  color: #000;
  font-size: 24px;
  font-weight: 700;
  padding: 0px 16px;
}

/* Navbar logo hover */
.navbar-logo:hover {
  cursor: pointer;
}

/* Navbar responsive */
.navbar-responsive {
  align-items: center;
  background-color: #92e585;
  border-top: 1px solid #ccc;
  bottom: 0px;
  display: flex;
  height: 70px;
  justify-content: space-around;
  left: 0px;
  padding: 16px;
  position: fixed;
  text-align: center;
  width: 100%;
  z-index: 1;
}

/* Navbar responsive section */
.navbar-responsive-section {
  color: #000;
  padding: 0px 4px;
}

/* Navbar and social media section hover */
.navbar-responsive-section:hover,
.navbar-section:hover,
.social-media-icon:hover {
  color: #707070;
  cursor: pointer;
  text-decoration: none;
}

/* Navbar responsive section name */
.navbar-responsive-section-name {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 10px;
  margin-top: 4px;
}

/* Navbar section */
.navbar-section {
  color: #000;
  padding: 0px 16px;
}

/* Navbar spacing */
.navbar-spacing {
  flex: 1;
}

/* Profile, Projects and Skills Components */
#profile,
#projects,
#skills {
  background-color: #f3efe0;
  padding: 70px;
}

/* Profile image */
.profile-image {
  border-radius: 50%;
  height: auto;
  max-height: 300px;
  max-width: 300px;
  width: 100%;
}

/* Remove default styling on rows */
.row {
  margin: 0px !important;
}

/* Section name */
.section-name {
  font-size: 36px;
  font-weight: 700;
}

/* Skills name */
.skills-name {
  font-weight: 900;
  margin-top: 8px;
}

/* Social media icon */
.social-media-icon {
  color: #000;
}

/* Social media section */
.social-media-section {
  color: #000;
  padding: 0px 8px;
}

/* Title */
.title {
  font-size: 24px;
  font-weight: 700;
}

/* Unlisted order */
ul {
  padding-left: 16px;
}

/* Responsive design at min width 992px */
@media screen and (min-width: 992px) {
  .navbar-responsive {
    display: none;
  }
}

/* Responsive design at max width 991px */
@media screen and (max-width: 991px) {
  .col-lg-4,
  .col-lg-8 {
    padding: 0px !important;
  }

  #education,
  #employment,
  #profile,
  #projects,
  #skills {
    padding: 70px 24px;
    text-align: center;
  }

  .navbar,
  .navbar-effect {
    padding: 16px;
  }

  .navbar-section {
    display: none;
  }
}

